--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,14 @@
             <groupId>org.immregistries</groupId>
             <artifactId>mismo-match</artifactId>
             <version>1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.mitre.synthea</groupId>
             <artifactId>synthea</artifactId>
@@ -100,7 +107,7 @@
         <dependency>
             <groupId>org.immregistries</groupId>
             <artifactId>smm-tester</artifactId>
-            <version>2.35.0</version>
+            <version>2.37.1</version>
             <classifier>client</classifier>
             <exclusions>
                 <exclusion>
